--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
     </developer>
   </developers>
 
+  <contributors>
+    <contributor>
+      <name>Philip M. White</name>
+      <email>philip@mailworks.org</email>
+    </contributor>
+  </contributors>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -51,12 +58,12 @@
     <dependency>
 	  <groupId>com.amazonaws</groupId>
 	  <artifactId>aws-java-sdk-lambda</artifactId>
-	  <version>1.10.4.1</version>
+	  <version>1.10.45</version>
 	</dependency>
 	<dependency>
 	  <groupId>com.amazonaws</groupId>
 	  <artifactId>aws-java-sdk-s3</artifactId>
-	  <version>1.10.4.1</version>
+	  <version>1.10.45</version>
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -68,6 +75,11 @@
     	<groupId>org.slf4j</groupId>
     	<artifactId>slf4j-api</artifactId>
     	<version>1.7.12</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.10</version>
     </dependency>
   </dependencies>
   
