--- a/META-INF/maven/com.github.seanroy/lambduh-maven-plugin/pom.xml
+++ b/META-INF/maven/com.github.seanroy/lambduh-maven-plugin/pom.xml
@@ -68,13 +68,24 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-api</artifactId>
+    	<version>1.7.12</version>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.maven.plugin-testing</groupId>
+    	<artifactId>maven-plugin-testing-harness</artifactId>
+    	<version>3.3.0</version>
+    	<scope>test</scope>
     </dependency>
   </dependencies>
   
