--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.github.seanroy</groupId>
   <artifactId>lambduh-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0.4</version>
+  <version>1.0.6</version>
   
   <name>lambduh-maven-plugin Maven Mojo</name>
   <description>A maven plugin that deploys functions to AWS Lambda</description>
@@ -47,7 +47,13 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>2.0</version>
+      <version>3.3.3</version>
+    </dependency>
+    <dependency>
+   	  <groupId>org.apache.maven.plugin-testing</groupId>
+   	  <artifactId>maven-plugin-testing-harness</artifactId>
+   	  <version>3.3.0</version>
+   	  <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
@@ -55,6 +61,30 @@
       <version>3.4</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+	  <groupId>org.apache.maven</groupId>
+	  <artifactId>maven-compat</artifactId>
+	  <version>3.3.3</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.maven</groupId>
+	  <artifactId>maven-core</artifactId>
+	  <version>3.3.3</version>
+	  <scope>test</scope>
+	</dependency>
+	<dependency>
+	<groupId>maven</groupId>
+	  <artifactId>maven-model</artifactId>
+	  <version>3.0.2.javadoc</version>
+	  <type>javadoc.jar</type>
+	  <scope>test</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.maven</groupId>
+	  <artifactId>maven-aether-provider</artifactId>
+	  <version>3.3.3</version>
+	  <scope>test</scope>
+	</dependency>
     <dependency>
 	  <groupId>com.amazonaws</groupId>
 	  <artifactId>aws-java-sdk-lambda</artifactId>
@@ -76,6 +106,7 @@
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
     </dependency>
+    
   </dependencies>
   
   <distributionManagement>
