Updated readme and added Guillermo as contributor in pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
       <name>Philip M. White</name>
       <email>philip@mailworks.org</email>
     </contributor>
+    <contributor>
+      <name>Guillermo Menendez</name>
+    </contributor>
   </contributors>
 
   <properties>
