--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.github.seanroy</groupId>
   <artifactId>lambduh-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.1.2</version>
+  <version>1.1.1</version>
 
   <name>lambduh-maven-plugin Maven Mojo</name>
   <description>A maven plugin that deploys functions to AWS Lambda</description>
@@ -194,6 +194,11 @@
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
           <keepStagingRepositoryOnFailure>false</keepStagingRepositoryOnFailure>
         </configuration>
+      </plugin>
+      <plugin>
+    	<groupId>org.sonatype.plugins</groupId>
+    	<artifactId>maven-versions-plugin</artifactId>
+    	<version>1.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
