add support for schduled rules

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>aws-java-sdk-sns</artifactId>
             <version>${aws.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-events</artifactId>
+            <version>${aws.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.maven.plugin-testing</groupId>
