--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>no.cantara.maven.plugins</groupId>
+    <groupId>com.github.seanroy</groupId>
     <artifactId>lambda-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <parent>
         <groupId>no.cantara.emi</groupId>
