change contact email to krzysztof@flowlab.no

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         </contributor>
         <contributor>
             <name>Krzysztof Grodzicki</name>
-            <email>kgrodzicki@gmail.com</email>
+            <email>krzysztof@flowlab.no</email>
         </contributor>
     </contributors>
 
