--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.0.2.javadoc</version>
+            <type>javadoc.jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-aether-provider</artifactId>
             <version>3.3.3</version>
