Sonatype artifact maven-version-plugin was actually written "maven-version-plugin" in root pom.

--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,7 @@
             </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
-                <artifactId>maven-versions-plugin</artifactId>
+                <artifactId>maven-version-plugin</artifactId>
                 <version>1.0</version>
             </plugin>
             <plugin>
