--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </contributors>
 
     <properties>
-        <aws.version>1.11.66</aws.version>
+        <aws.version>1.11.128</aws.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -122,6 +122,11 @@
             <version>${aws.version}</version>
         </dependency>
         <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-java-sdk-api-gateway</artifactId>
+          <version>${aws.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -136,6 +141,11 @@
             <groupId>de.juplo</groupId>
             <artifactId>scannotation</artifactId>
             <version>1.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
         </dependency>
     </dependencies>
 
