--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.github.seanroy</groupId>
     <artifactId>lambda-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.2.0</version>
+    <version>2.2.1-SNAPSHOT</version>
 
     <name>lambda-maven-plugin Maven Mojo</name>
     <description>A maven plugin that deploys functions to AWS Lambda</description>
@@ -152,6 +152,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.3</version>
         </dependency>
+        <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.1</version>
+		</dependency>
     </dependencies>
 
     <distributionManagement>
