--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.github.seanroy</groupId>
     <artifactId>lambda-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.2.6-SNAPSHOT</version>
+    <version>2.2.6</version>
 
     <name>lambda-maven-plugin Maven Mojo</name>
     <description>A maven plugin that deploys functions to AWS Lambda</description>
@@ -157,6 +157,12 @@
 		    <artifactId>gson</artifactId>
 		    <version>2.8.1</version>
 		</dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-core</artifactId>
+        	<version>2.10.0</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
