--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,16 @@
           <version>${aws.version}</version>
         </dependency>
         <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-java-sdk-kms</artifactId>
+          <version>${aws.version}</version>
+        </dependency>
+		<dependency>
+		  <groupId>com.amazonaws</groupId>
+		  <artifactId>aws-encryption-sdk-java</artifactId>
+		  <version>1.3.1</version>
+		</dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
