--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
           <artifactId>aws-java-sdk-kms</artifactId>
           <version>${aws.version}</version>
         </dependency>
+        <dependency>
+          <groupId>com.amazonaws</groupId>
+          <artifactId>aws-java-sdk-sqs</artifactId>
+          <version>${aws.version}</version>
+        </dependency>
 		<dependency>
 		  <groupId>com.amazonaws</groupId>
 		  <artifactId>aws-encryption-sdk-java</artifactId>
