--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.github.seanroy</groupId>
     <artifactId>lambda-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>2.3.2</version>
+    <version>2.3.3</version>
 
     <name>lambda-maven-plugin Maven Mojo</name>
     <description>A maven plugin that deploys functions to AWS Lambda</description>
@@ -230,7 +230,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <executions>
@@ -242,7 +242,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
