--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
 		  <artifactId>aws-encryption-sdk-java</artifactId>
 		  <version>1.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.elderresearch.commons-jvm</groupId>
+			<artifactId>commons-jvm-java8</artifactId>
+			<version>2.6.0</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
